--- a/build-constraints.yaml
+++ b/build-constraints.yaml
@@ -1430,7 +1430,7 @@ packages:
         - fin
         - functor-classes-compat
         - generics-sop-lens
-        - github < 0
+        - github
         - insert-ordered-containers
         - integer-logarithms
         - JuicyPixels-scale-dct
